--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <div id="header"><h2>Hi, let's to encrypt a text</h2></div>
-    <div id="input"><textarea type="text" id="textbox" placeholder="Put your text here" oninput="autoResize()"></textarea></div>
+    <div id="header">Hi, let's to encrypt a text</div>
+    <div id="input">
+        <textarea type="text" id="textbox" placeholder="Put your text here" oninput="autoResize()"></textarea>
+        <br/>
+        <input type="button" name="button" id="button" value="Encrypt the text">
+    </div>
     <div id="output">Text encrypted</div>
 
     <script src="js.js"></script>
